# creditsafe-assesment

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_customers.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  customer.py
backend/app/repositories/: __init__.py  customer_repository.py
backend/app/routers/: __init__.py  customers.py
backend/app/schemas/: __init__.py  customer.py
backend/app/services/: __init__.py  customer_service.py
backend/tests/: conftest.py  test_customer_repository.py  test_customer_schemas.py  test_customer_service.py  test_customers_api.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/customers/: customer-card.tsx  customer-detail.tsx  customer-form.tsx  customer-list.tsx
frontend/src/components/layout/: header.tsx  page-layout.tsx
frontend/src/hooks/: use-customers.ts
frontend/src/lib/: api-client.ts  customer-validation.ts  utils.ts
frontend/src/pages/: customer-detail-page.tsx  customers-page.tsx  new-customer-page.tsx
frontend/src/types/: customer.ts
frontend/tests/: setup.ts  types.d.ts
frontend/tests/components/: customer-detail.test.tsx  customer-form.test.tsx  customer-list.test.tsx
frontend/tests/hooks/: use-customers.test.tsx
(+6 files in other folders)
